[package]
name = "cloudflare-dyndns"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflare = "*"
quote = "=1.0.2"
tokio = { version = "*", features = [ "macros" ] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = "*"
clap = "*"
log = "*"
env_logger = "*"